--- a/src/main/java/stanic/view/ProzorGodisnji.form
+++ b/src/main/java/stanic/view/ProzorGodisnji.form
@@ -102,7 +102,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JList" name="lstZaposleniciUBazi">
+        <Component class="javax.swing.JList" name="lstEntiteti">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
               <StringArray count="0"/>
@@ -110,10 +110,10 @@
             <Property name="selectionMode" type="int" value="0"/>
           </Properties>
           <Events>
-            <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="lstZaposleniciUBaziValueChanged"/>
+            <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="lstEntitetiValueChanged"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Godisnji&gt;"/>
           </AuxValues>
         </Component>
       </SubComponents>
@@ -165,7 +165,7 @@
         <Component class="javax.swing.JTable" name="tblGodisnji">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="4">
+              <Table columnCount="3" rowCount="10">
                 <Column editable="false" title="Po&#x10d;etak GO" type="java.lang.String"/>
                 <Column editable="true" title="Zavr&#x161;etak GO" type="java.lang.String"/>
                 <Column editable="true" title="Iskori&#x161;teno dana GO" type="java.lang.Integer"/>
