--- a/src/main/java/stanic/view/ProzorGodisnji.form
+++ b/src/main/java/stanic/view/ProzorGodisnji.form
@@ -113,7 +113,7 @@
             <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="lstEntitetiValueChanged"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Godisnji&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Zaposlenik&gt;"/>
           </AuxValues>
         </Component>
       </SubComponents>
