--- a/src/main/java/stanic/view/ProzorGlavni.form
+++ b/src/main/java/stanic/view/ProzorGlavni.form
@@ -159,8 +159,11 @@
             </Property>
             <Property name="selectionMode" type="int" value="0"/>
           </Properties>
+          <Events>
+            <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="lstOdmoriValueChanged"/>
+          </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;ZaposlenikGodisnji&gt;"/>
           </AuxValues>
         </Component>
       </SubComponents>
